First stable working
Former-commit-id: e4cbc99edf4a6b932ab72f16276f9d0796d1373e

--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+
 <head>
-  <meta charset="UTF-8">
-  <title>Ionic App</title>
+  <meta charset="UTF-8">1
+  <meta http-equiv="Content-Security-Policy" content="font-src 'self' data:;">
+  <!--todo to do remove in production-->
+  <title>Game</title>
   <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta name="format-detection" content="telephone=no">
   <meta name="msapplication-tap-highlight" content="no">
@@ -15,9 +18,6 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
-  <!-- cordova.js required for cordova apps (remove if not needed) -->
-  <script src="cordova.js"></script>
-
   <!-- un-comment this code to enable service worker
   <script>
     if ('serviceWorker' in navigator) {
@@ -29,12 +29,23 @@
 
   <link href="build/main.css" rel="stylesheet">
 
+  <link href="assets/game/TemplateData/style.css" rel="stylesheet">
+  <script src="assets/game/TemplateData/UnityProgress.js"></script>
+  <script src="assets/game/Build/UnityLoader.js"></script>
 </head>
+
 <body>
 
   <!-- Ionic's root component and where the app will load -->
   <ion-app></ion-app>
+  <!-- <div class="webgl-content" style="width: 960px; height: 540px; margin: auto;">
+    <div id="gameContainer" style="width: 960px; height: 540px; margin: auto;"></div>
+    <div class="footer">
+      <div class="fullscreen" onclick="gameInstance.SetFullscreen(1)"></div>
+    </div>
+  </div> -->
 
+  <div id="canvasfull"></div>
   <!-- The polyfills js is generated during the build process -->
   <script src="build/polyfills.js"></script>
 
@@ -46,4 +57,5 @@
   <script src="build/main.js"></script>
 
 </body>
+
 </html>
