--- a/src/pages/auctions/auctions.html
+++ b/src/pages/auctions/auctions.html
@@ -5,5 +5,5 @@
 <header-component></header-component>
 
 <ion-content padding>
-  <h3>Domain for sale, contact hajaekyung@protonmail.com</h3>
+  Coming soon
 </ion-content>
