--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -5,7 +5,7 @@
 <header-component></header-component>
 
 <ion-content no-padding>
-  <ion-grid class="contentRoom">
+  <ion-grid>
     <ion-row>
       <ion-spinner *ngIf="loading" ion-col col-12>
       </ion-spinner>
@@ -13,5 +13,4 @@
     </ion-row>
   </ion-grid>
 
-  <footer-component></footer-component>
 </ion-content>
