--- a/src/pages/ship/ship.html
+++ b/src/pages/ship/ship.html
@@ -4,10 +4,8 @@
 </ion-header>
 <header-component></header-component>
 
-<ion-content>
-  <div class="contentRoom">
-    Coming soon
-  </div>
 
-  <footer-component></footer-component>
+
+<ion-content padding>
+
 </ion-content>
