--- a/src/pages/game/game.html
+++ b/src/pages/game/game.html
@@ -11,9 +11,15 @@
 
       <div class="chatbutton" (click)="toggleChat()">
       </div>
+
+      <div *ngIf="!gameLoaded">
+        <img src="/assets/imgs/loading-grey.png" class="load-img load-grey">
+        <img src="/assets/imgs/loading-pink.png" class="load-img load-pink" [style.clip-path]="loadingStyle">
+      </div>
+
       <div id="canvaswindow">
         <div class="webgl-content" id="canvaswrapper">
-          <div id="gameContainer" style="width: 960px; height: 540px;"></div>
+          <div id="gameContainer"></div>
           <div class="footer">
             <div class="fullscreen" (click)="goFull()"></div>
           </div>
@@ -32,7 +38,7 @@
     </div>
   </ion-content>
 
-  <ion-menu side="right" type="push" [content]="content">
+  <ion-menu side="right" type="push" [content]="content" [ngClass]="{'moveMenu' : 'showChat'}">
     <ion-header>
       <ion-toolbar>
         <ion-title>Menu</ion-title>
@@ -45,13 +51,18 @@
 
     <ion-content #chatcontent ion-scroll>
 
-
       <ion-row *ngIf="!chatConnected">
         <ion-col col-12>
           <p>Waiting to join a game lobby</p>
         </ion-col>
         <ion-spinner ion-col col-12>
         </ion-spinner>
+        <div class="swapping-squares-spinner" :style="spinnerStyle">
+          <div class="square"></div>
+          <div class="square"></div>
+          <div class="square"></div>
+          <div class="square"></div>
+        </div>
       </ion-row>
       <ion-list no-lines class="chatbox" *ngIf="chatConnected">
         <ion-item *ngFor="let msg of msgs">
