--- a/src/pages/auctions/auctions.html
+++ b/src/pages/auctions/auctions.html
@@ -6,6 +6,9 @@
 
 <ion-content>
   <div class="contentRoom">
+    <!-- <svg>
+      <use xlink:href="#ship1"></use>
+    </svg> -->
     Coming soon
   </div>
 
