--- a/src/pages/game/game.html
+++ b/src/pages/game/game.html
@@ -1,20 +1,25 @@
 <ion-split-pane [when]="showChat">
-  <ion-header #head>
-    <ion-navbar>
-    </ion-navbar>
-  </ion-header>
+  <ion-header #head> <ion-navbar> </ion-navbar> </ion-header>
   <header-component></header-component>
   <ion-content no-padding #content>
-
-    <div *ngIf="!appState.account">Ethereum account required to play. {{appState.accountStatus}}</div>
-    <div *ngIf="appState.account">
-
-      <div class="chatbutton" (click)="toggleChat()">
-      </div>
+    <!--
+      <div *ngIf="!appState.account">Ethereum account required to play. {{appState.accountStatus}}</div>
+    -->
+    <div *ngIf="appState">
+      <div
+        class="chatbutton"
+        (click)="toggleChat()"
+        *ngIf="mouseVisible() && gameLoaded"
+        tappable
+      ></div>
 
       <div *ngIf="!gameLoaded">
-        <img src="/assets/imgs/loading-grey.png" class="load-img load-grey">
-        <img src="/assets/imgs/loading-pink.png" class="load-img load-pink" [style.clip-path]="loadingStyle">
+        <img src="/assets/imgs/loading-grey.png" class="load-img load-grey" />
+        <img
+          src="/assets/imgs/loading-pink.png"
+          class="load-img load-pink"
+          [style.clip-path]="loadingStyle"
+        />
       </div>
 
       <div id="canvaswindow">
@@ -25,38 +30,75 @@
           </div>
         </div>
       </div>
-      <!-- <ion-grid>
-      <ion-row>
-        <ion-col col-4>
-        </ion-col>
-        <ion-col col-4>
-        </ion-col>
-        <ion-col col-4>
-        </ion-col>
+      <!--
+        <ion-grid>
+          <ion-row>
+            <ion-col col-4>
+            </ion-col>
+            <ion-col col-4>
+            </ion-col>
+            <ion-col col-4>
+            </ion-col>
+          </ion-row>
+        </ion-grid>
+      -->
+    </div>
+
+    <div class="shipSelect abs-center" *ngIf="showSelect">
+      <ion-spinner *ngIf="!ships" class="abs-center"> </ion-spinner>
+      <div class="contentRoom">
+        <ion-grid>
+          <ion-row justify-content-center>
+            <ship-select
+              *ngFor="
+                let ship of (ships
+                  | paginate: { itemsPerPage: 8, currentPage: p })
+              "
+              ion-col
+              col-12
+              col-xl-3
+              col-lg-3
+              col-md-4
+              col-sm-6
+              [ship]="ship"
+            ></ship-select>
+          </ion-row>
+        </ion-grid>
+      </div>
+      <ion-row ion-col col-12 class="select-footer">
+        <pagination-controls
+          *ngIf="ships"
+          previousLabel=""
+          nextLabel=""
+          class="ship-pagination"
+          (pageChange)="p = $event"
+        ></pagination-controls>
       </ion-row>
-    </ion-grid> -->
     </div>
   </ion-content>
 
-  <ion-menu side="right" type="push" [content]="content" [ngClass]="{'moveMenu' : 'showChat'}">
+  <ion-menu
+    side="right"
+    type="push"
+    [content]="content"
+    [ngClass]="{ moveMenu: 'showChat' }"
+  >
     <ion-header>
-      <ion-toolbar>
-        <ion-title>Menu</ion-title>
-      </ion-toolbar>
+      <ion-toolbar> <ion-title>Menu</ion-title> </ion-toolbar>
     </ion-header>
 
     <ion-footer>
-      <ion-input placeholder="Send a message" [(ngModel)]="msg" (keypress)="send($event.keyCode)"></ion-input>
+      <ion-input
+        placeholder="Send a message"
+        [(ngModel)]="msg"
+        (keypress)="send($event.keyCode)"
+      ></ion-input>
     </ion-footer>
 
     <ion-content #chatcontent ion-scroll>
-
       <ion-row *ngIf="!chatConnected">
-        <ion-col col-12>
-          <p>Waiting to join a game lobby</p>
-        </ion-col>
-        <ion-spinner ion-col col-12>
-        </ion-spinner>
+        <ion-col col-12> <p>Waiting to join a game lobby</p> </ion-col>
+        <ion-spinner ion-col col-12> </ion-spinner>
         <div class="swapping-squares-spinner" :style="spinnerStyle">
           <div class="square"></div>
           <div class="square"></div>
@@ -66,11 +108,18 @@
       </ion-row>
       <ion-list no-lines class="chatbox" *ngIf="chatConnected">
         <ion-item *ngFor="let msg of msgs">
-          <span class="username">{{ msg.username }}:</span>
-          <span class="message">{{ msg.text }}</span>
+          <a
+            [href]="'/profile/' + msg.account"
+            target="_blank"
+            class="username"
+            *ngIf="msg.username"
+            >{{ msg.username }}:</a
+          >
+          <span class="message" [ngClass]="{ boldChat: !msg.username }">{{
+            msg.text
+          }}</span>
         </ion-item>
       </ion-list>
     </ion-content>
-
   </ion-menu>
 </ion-split-pane>
