--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -6,7 +6,7 @@
 
 <ion-content no-padding>
   <ion-grid>
-    <ion-row>
+    <ion-row myMatchHeight="ship-card">
       <ion-spinner *ngIf="loading" ion-col col-12>
       </ion-spinner>
       <ship-card *ngFor="let ship of ships" ion-col col-12 col-xl-3 col-lg-4 col-md-6 [ship]="ship"></ship-card>
