--- a/src/pages/game/game.html
+++ b/src/pages/game/game.html
@@ -13,7 +13,7 @@
         tappable
       ></div>
 
-      <div *ngIf="!gameLoaded">
+      <div *ngIf="!gameLoaded && webgl">
         <img src="/assets/imgs/loading-grey.png" class="load-img load-grey" />
         <img
           src="/assets/imgs/loading-pink.png"
