--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,32 +1,41 @@
 <ion-header #head>
-  <ion-navbar>
-  </ion-navbar>
+  <ion-navbar> </ion-navbar>
 </ion-header>
 <header-component></header-component>
 
 <ion-content>
   <div class="contentRoom">
-    <p *ngIf="appState.username && !success" class="abs-center">Username is: {{appState.username}}</p>
+    <ion-grid>
+      <ion-row class="card-demo">
+        <p>Eth.bid is a game based off the the collectible crypto game <a href="https://cryptokitties.co">CryptoKitties</a> and utilizes the CryptoKitties <a href="https://docs.api.cryptokitties.co">API</a> and its <a href="https://etherscan.io/address/0x06012c8cf97bead5deae237070f9587f8e7a266d">contract</a> that is on the <a href="https://www.ethereum.org/">Ethereum</a> blockchain. </p>
+        <ship-card *ngFor="let ship of ships" ion-col col-6 [ship]="ship" [demo]="true"></ship-card>
+        <p>Each CryptoKitty DNA is converted into a unique ship with a dynamically generated SVG and also translated into the full 3D game. Different colors, models, sizes, and weapons are uniqiely determined by the genes.</p>
+        <img src="https://img.cryptokitties.co/0x06012c8cf97bead5deae237070f9587f8e7a266d/1338164.svg"> = <img src="/assets/imgs/ships/tutorial1.svg">
+      </ion-row>
+    </ion-grid>
+
+    <!-- <p *ngIf="appState.username && !success" class="abs-center">
+      Username is: {{ appState.username }}
+    </p>
     <p *ngIf="appState.username && success" class="abs-center">
-      Registration success for: {{appState.username}}</p>
+      Registration success for: {{ appState.username }}
+    </p>
     <div *ngIf="!appState.username" class="metamask">
       <div *ngIf="!appState.account">
         <div *ngIf="appState.accountStatus == 'No MetaMask extension installed'">
           <a href="https://metamask.io">
-            <img src="https://github.com/MetaMask/faq/raw/master/images/download-metamask-dark.png">
+            <img src="https://github.com/MetaMask/faq/raw/master/images/download-metamask-dark.png" />
           </a>
         </div>
 
         <div *ngIf="appState.accountStatus != 'No MetaMask extension installed'">
-          {{appState.accountStatus}}
+          {{ appState.accountStatus }}
         </div>
-
       </div>
       <form *ngIf="appState.account" (ngSubmit)="register()" class="registration">
         <p>Register your ethereum address</p>
 
         <ion-list>
-
           <ion-item>
             <ion-label fixed>Username</ion-label>
             <ion-input type="text" [(ngModel)]="requestedName" name="requestedName"></ion-input>
@@ -39,11 +48,13 @@
         </ion-list>
 
         <div padding>
-          <button ion-button color="primary" block type="submit">Register</button>
-          <p block text-center>{{status}}</p>
+          <button ion-button color="primary" block type="submit">
+            Register
+          </button>
+          <p block text-center>{{ status }}</p>
         </div>
       </form>
-    </div>
+    </div> -->
   </div>
 
   <footer-component></footer-component>
