--- a/src/pages/my-ships/my-ships.html
+++ b/src/pages/my-ships/my-ships.html
@@ -1,16 +1,23 @@
-<ion-header #head>
-  <ion-navbar>
-  </ion-navbar>
-</ion-header>
+<ion-header #head> <ion-navbar> </ion-navbar> </ion-header>
 <header-component></header-component>
 
 <ion-content no-padding>
   <ion-grid class="contentRoom">
     <ion-spinner *ngIf="!appState.ships && appState.account" class="abs-center">
     </ion-spinner>
-    <div *ngIf="!appState.account">Ethereum account required to play. {{appState.accountStatus}}</div>
+    <div *ngIf="!appState.account">
+      Ethereum account required to play. {{ appState.accountStatus }}
+    </div>
     <ion-row *ngIf="appState.ships" myMatchHeight="shipWrap">
-      <ship-card *ngFor="let ship of appState.ships" ion-col col-12 col-xl-3 col-lg-4 col-md-6 [ship]="ship"></ship-card>
+      <ship-card
+        *ngFor="let ship of appState.ships"
+        ion-col
+        col-12
+        col-xl-3
+        col-lg-4
+        col-md-6
+        [ship]="ship"
+      ></ship-card>
     </ion-row>
   </ion-grid>
 
